--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 
 	<meta charset="utf-8">
@@ -62,7 +62,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
             <li><a href="#about" class="smoothScroll"><span>A propos</span></a></li>
             <li><a href="#gallery" class="smoothScroll"><span>Réalisations</span></a></li>
             <li><a href="#contact" class="smoothScroll"><span>Contact</span></a></li>
-            <li><a href="gallery.html" class="smoothScroll"><div class="nav-link-gallery"></div></a></li>
+            <li><a href="gallery.html" class="smoothScroll"><div class="nav-link-gallery" title="Galerie"></div></a></li>
           </ul>
        </div>
     </div>
