Change email and phone.

--- a/index.html
+++ b/index.html
@@ -324,8 +324,11 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
         <div class="col-lg-offset-1 col-lg-10 section-title wow fadeInUp" data-wow-delay="0.4s">
           <h1>Contactez-moi</h1>
           <p>Si vous souhaitez plus d'information, un devis ou un conseil.</p>
-          <div class="contact-container"><img class= "contact-icon" src="images/phone-call.png"></img><span>06 64 18 60 69</span></div>
-          <div class="contact-container"><img class= "contact-icon" src="images/email.png"></img><span>boris.raimbault.37@gmail.com</span></div>
+         <!-- <div class="contact-container"><img class= "contact-icon" src="images/phone-call.png"></img><span><a href="tel:06 7798383">06 67 79 83 83</a></span></div>
+          <div class="contact-container"><img class= "contact-icon" src="images/email.png"></img><span><a href="mailto:mathildevedel.peintre@gmail.com">mathildevedel.peintre@gmail.com</a></span></div>-->
+          <div class="contact-container"><img class= "contact-icon" src="images/phone-call.png"></img><span>06 67 79 83 83</span></div>
+          <div class="contact-container"><img class= "contact-icon" src="images/email.png"></img><span>mathildevedel.peintre@gmail.com</span></div>
+
         </div>
        <!-- <form action="#" method="post" class="wow fadeInUp" data-wow-delay="0.8s">
           <div class="col-md-6 col-sm-6">
