Add lightbox.js to display full image in gallery.html Minify js with uglifyjs

--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/component.css">
-
+    <link href="css/lightbox.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/owl.theme.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/vegas.min.css">
@@ -66,29 +66,28 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
         <div class="container">
         <div class="row">
             <div class="column">
-                <img src="images/decors/Grisaille-min.jpg">
-                <img src="images/decors/Affiche SNCF-min.jpg">
-                <img src="images/decors/IMG_20210623_141043-min.jpg">
-                <img src="images/decors/IMG_20210623_141312-min.jpg">
+                <a href="images/decors/Grisaille-min.jpg" data-lightbox="image-1" data-title="Grisaille"><img src="images/decors/Grisaille-min.jpg"></a>
+                <a href="images/decors/Affiche SNCF-min.jpg" data-lightbox="image-1" data-title="Affiche SNCF"><img src="images/decors/Affiche SNCF-min.jpg"></a>
+                <a href="images/decors/IMG_20210623_141043-min.jpg" data-lightbox="image-1" data-title="???"><img src="images/decors/IMG_20210623_141043-min.jpg"></a>
+                <a href="images/decors/IMG_20210623_141312-min.jpg" data-lightbox="image-1" data-title="???"><img src="images/decors/IMG_20210623_141312-min.jpg"></a>
             </div>
             <div class="column">
-                <img src="images/decors/Paysage avec drapé 1-min.jpg">
-                <img src="images/decors/Rouille 3-min.jpg">
-                <img src="images/decors/carreaux de ciment-min.jpg">
-                <img src="images/decors/chaux 2-min.jpg">
+                <a href="images/decors/Paysage avec drapé 1-min.jpg" data-lightbox="image-1" data-title="Paysage avec drapé"><img src="images/decors/Paysage avec drapé 1-min.jpg"></a>
+                <a href="images/decors/jaune de sienne-min.jpg" data-lightbox="image-1" data-title="Jaune de sienne"><img src="images/decors/jaune de sienne-min.jpg"></a>
+                <a href="images/decors/Rouille 3-min.jpg" data-lightbox="image-1" data-title="Rouille"><img src="images/decors/Rouille 3-min.jpg"></a>
+                <a href="images/decors/carreaux de ciment-min.jpg" data-lightbox="image-1" data-title="Carreaux de ciment"><img src="images/decors/carreaux de ciment-min.jpg"></a>
+            </div>
+            <div class="column">
+                <a href="images/decors/drapé-min.jpg" data-lightbox="image-1" data-title="Drapé"><img src="images/decors/drapé-min.jpg"></a>
+                <a href="images/decors/IMG_20210623_142425-min.jpg" data-lightbox="image-1" data-title="???"><img src="images/decors/IMG_20210623_142425-min.jpg"></a>
+                <a href="images/decors/Panneau Rouille-min.jpg" data-lightbox="image-1" data-title="Panneau rouillé"><img src="images/decors/Panneau Rouille-min.jpg"></a>
+                <a href="images/decors/marbre + livre-min.jpg" data-lightbox="image-1" data-title="Marbre et livre"><img src="images/decors/marbre + livre-min.jpg"></a>
+            </div>
+            <div class="column">
+                <a href="images/decors/colonne vert de mer2-min.jpg" data-lightbox="image-1" data-title="Colonne vert de mer"><img src="images/decors/colonne vert de mer2-min.jpg"></a>
+                <a href="images/decors/Ornementation-min.jpg" data-lightbox="image-1" data-title="Ornementation"><img src="images/decors/Ornementation-min.jpg"></a>
+                <a href="images/decors/decors égyptien -min.jpg" data-lightbox="image-1" data-title="Décors égyptien"><img src="images/decors/decors égyptien -min.jpg"></a>
 
-            </div>
-            <div class="column">
-                <img src="images/decors/drapé-min.jpg">
-                <img src="images/decors/Ornementation-min.jpg">
-                <img src="images/decors/Panneau Rouille-min.jpg">
-                <img src="images/decors/Panneau Rouille-min.jpg">
-            </div>
-            <div class="column">
-                <img src="images/decors/colonne vert de mer2-min.jpg">
-                <img src="images/decors/decors égyptien -min.jpg">
-                <img src="images/decors/IMG_20210623_142425-min.jpg">
-                <img src="images/chantier/enduit/IMG_20220314_171836-min.jpg">
             </div>
         </div>
         </div>
@@ -126,15 +125,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
 <a href="#" class="go-top"><i class="fa fa-angle-up"></i></a>
 
 <!-- Javascript  -->
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<!--<script src="js/vegas.min.js"></script>-->
-<script src="js/modernizr.custom.js"></script>
-<script src="js/toucheffects.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/smoothscroll.js"></script>
-<script src="js/wow.min.js"></script>
-<script src="js/custom.js"></script>
+<script src="js/script.min.js"></script>
 </body>
 
 </html>
