--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
         </div>
       </div>
       <div class="col-md-3 col-sm-4 wow fadeInUp about-img" data-wow-delay="0.6s">
-        <img src="images/Paysage avec drapé 1-min.jpg" class="img-responsive img-circle" alt="About">
+        <img src="images/decors/Paysage avec drapé 1-min.jpg" class="img-responsive img-circle" alt="About">
       </div>
       <div class="clearfix"></div>
       <!-- <div class="col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
@@ -210,17 +210,16 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
       <ul class="grid cs-style-4">
         <li class="col-md-6 col-sm-6">
           <figure>
-            <div><img src="images/carreaux de ciment-min.jpg" alt="image 2"></div>
+            <div><img src="images/decors/carreaux de ciment-min.jpg" alt="image 2"></div>
             <figcaption>
               <h1>Aliquam erat</h1>
               <small>Suspendisse venenatis quam sed libero euismod feugiat.</small>
-              <a href="#">Details</a>
             </figcaption>
           </figure>
         </li>
         <li class="col-md-6 col-sm-6">
           <figure>
-            <div><img src="images/Affiche SNCF-min.jpg" alt="image 1"></div>
+            <div><img src="images/decors/Affiche SNCF-min.jpg" alt="image 1"></div>
             <figcaption>
               <h1>Sapien arcu</h1>
               <small>Cum sociis natoque penatibus et magnis dis parturient montes.</small>
@@ -229,7 +228,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
         </li>
         <li class="col-md-6 col-sm-6">
           <figure>
-            <div><img src="images/Affiche SNCF-min.jpg" alt="image 1"></div>
+            <div><img src="images/decors/Paysage avec drapé 1-min.jpg" alt="image 1"></div>
             <figcaption>
               <h1>Sapien arcu</h1>
               <small>Cum sociis natoque penatibus et magnis dis parturient montes.</small>
@@ -238,16 +237,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
         </li>
         <li class="col-md-6 col-sm-6">
           <figure>
-            <div><img src="images/Affiche SNCF-min.jpg" alt="image 1"></div>
-            <figcaption>
-              <h1>Sapien arcu</h1>
-              <small>Cum sociis natoque penatibus et magnis dis parturient montes.</small>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="col-md-6 col-sm-6">
-          <figure>
-            <div><img src="images/Affiche SNCF-min.jpg" alt="image 1"></div>
+            <div><img src="images/decors/decors égyptien -min.jpg" alt="image 1"></div>
             <figcaption>
               <h1>Sapien arcu</h1>
               <small>Cum sociis natoque penatibus et magnis dis parturient montes.</small>
@@ -255,59 +245,6 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
           </figure>
         </li>
 
-        <!--<li class="col-md-6 col-sm-6">
-          <figure>
-            <div><img src="images/carreaux de ciment-min.jpg" alt="image 2"></div>
-            <figcaption>
-              <h1>Aliquam erat</h1>
-              <small>Suspendisse venenatis quam sed libero euismod feugiat.</small>
-              <a href="#">Details</a>
-            </figcaption>
-          </figure>
-        </li>
-
-        <li class="col-md-6 col-sm-6">
-          <figure>
-            <div><img src="images/decors/IMG_20210623_141043-min.jpg" alt="image 3"></div>
-            <figcaption>
-              <h1>Cras ante sem</h1>
-              <small>Aenean urna massa, convallis vehicula velit et, dictum pellentesque nisi.</small>
-              <a href="#">Learn More</a>
-            </figcaption>
-          </figure>
-        </li>
-
-        <li class="col-md-6 col-sm-6">
-          <figure>
-            <div><img src="images/colonne vert de mer2-min.jpg" alt="image 4"></div>
-            <figcaption>
-              <h1>Sed ornare</h1>
-              <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</small>
-              <a href="#">Full Post</a>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="col-md-6 col-sm-6">
-          <figure>
-            <div><img src="images/Affiche SNCF-min.jpg" alt="image 1"></div>
-            <figcaption>
-              <h1>Sapien arcu</h1>
-              <small>Cum sociis natoque penatibus et magnis dis parturient montes.</small>
-              <a href="#">Read More</a>
-            </figcaption>
-          </figure>
-        </li>
-
-        <li class="col-md-6 col-sm-6">
-          <figure>
-            <div><img src="images/carreaux de ciment-min.jpg" alt="image 2"></div>
-            <figcaption>
-              <h1>Aliquam erat</h1>
-              <small>Suspendisse venenatis quam sed libero euismod feugiat.</small>
-              <a href="#">Details</a>
-            </figcaption>
-          </figure>
-        </li>-->
       </ul>
     </div>
   </div>
@@ -375,7 +312,8 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
 <a href="#" class="go-top"><i class="fa fa-angle-up"></i></a>
 
 <!-- Javascript  -->
-<script src="js/jquery.js"></script>
+<script src="js/script.min.js"></script>
+<!--<script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/vegas.min.js"></script>
 <script src="js/modernizr.custom.js"></script>
@@ -383,6 +321,6 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/smoothscroll.js"></script>
 <script src="js/wow.min.js"></script>
-<script src="js/custom.js"></script>
+<script src="js/custom.js"></script>-->
 </body>
 </html>
