--- a/index.html
+++ b/index.html
@@ -91,64 +91,68 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
       <div class="col-md-9 col-sm-8 wow fadeInUp" data-wow-delay="0.2s">
         <div class="about-thumb">
           <h1>Qui suis-je ?</h1>
-          <p>Je suis Mathilde Vedel, peintre décorateur. Blablablabla</p>
+          <p>En ???, je décide de m'investir dans un projet associatif à Bordeaux chez les Compagnons Bâtisseurs.
+            Riche de cette expérience de 3 années, j'acquis des compétences dans le second œuvre du bâtiment (électrique, menuiserie, carrelage, ossature bois).</p>
+          <p>Mon appétence pour la peinture se confirme lors de la formation de peintre en décor à l'école Murs déc à Nantes. Ensuite, j’intègre en ??? Color Rare, entreprise experte en pigment naturelle et enduits à la chaux.</p>
+          <p>Dans la peinture, j'exploite mes compétences dans les fausses matières (marbres, bois, pierres...), les enduits décoratifs, les trompes l’œil ainsi que dans la réalisation de toile.</p>
         </div>
       </div>
-      <div class="col-md-3 col-sm-4 wow fadeInUp about-img" data-wow-delay="0.6s">
+      <!--<div class="col-md-3 col-sm-4 wow fadeInUp about-img" data-wow-delay="0.6s">
         <img src="images/decors/Paysage avec drapé 1-min.jpg" class="img-responsive img-circle" alt="About">
-      </div>
+      </div>-->
       <div class="clearfix"></div>
-      <!-- <div class="col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
+      <div class="col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
          <div class="section-title text-center">
-           <h1>Snapshot Team</h1>
-           <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+           <h1>Mes services</h1>
+           <!-- <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>-->
          </div>
-       </div>-->
+       </div>
 
        <!-- team carousel -->
-      <!--<div id="team-carousel" class="owl-carousel">
+
+      <div id="team-carousel" class="owl-carousel">
 
       <div class="item col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
         <div class="team-thumb">
           <div class="image-holder">
-            <img src="images/team-img1.jpg" class="img-responsive img-circle" alt="Mary">
+            <img src="images/decors/IMG_20210623_141043-min.jpg" class="img-responsive img-circle" alt="">
           </div>
-          <h2 class="heading">Mary, CEO</h2>
-          <p class="description">Aliquam ac justo est. Praesent feugiat cursus est.</p>
+          <h2 class="heading">Peinture décorative</h2>
+          <p class="description">Trompe l'oeil, fausse matière (bois, marbres, pierres), toiles</p>
         </div>
       </div>
 
       <div class="item col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
         <div class="team-thumb">
           <div class="image-holder">
-            <img src="images/team-img2.jpg" class="img-responsive img-circle" alt="Jack">
+            <img src="images/chantier/chaux/IMG_20210326_113745-min.jpg" class="img-responsive img-circle" alt="">
           </div>
-          <h2 class="heading">Jack, Founder</h2>
-          <p class="description">Maecenas sed diam eget risus varius blandit sit non.</p>
+          <h2 class="heading">Peinture à la chaux et enduits décoratifs</h2>
+          <p class="description">Matériaux qui permettent de donner du cachet à une pièce. Le mur devient une œuvre d'art en soit, chaque mur devient unique. De plus, ces matériaux sont écologiques.</p>
         </div>
       </div>
 
       <div class="item col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
         <div class="team-thumb">
           <div class="image-holder">
-            <img src="images/team-img3.jpg" class="img-responsive img-circle" alt="Linda">
+            <img src="images/chantier/portes placard/IMG_20220113_154925.jpg" class="img-responsive img-circle" alt="">
           </div>
-          <h2 class="heading">Linda, Manager</h2>
-          <p class="description">Phasellus nec ante in nunc molestie tincidunt ut eu diam.</p>
+          <h2 class="heading">Chantier de rénovation</h2>
+          <p class="description">Analyse et préparation des supports, peinture des murs, plafonds, boiseries.</p>
         </div>
       </div>
 
       <div class="item col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
         <div class="team-thumb">
           <div class="image-holder">
-            <img src="images/team-img4.jpg" class="img-responsive img-circle" alt="Sandy">
+            <img src="images/advice.png" class="img-responsive img-circle" alt="">
           </div>
-          <h2 class="heading">Sandy, Director</h2>
-          <p class="description">Curabitur vulputate euismod neque et tincidunt.</p>
+          <h2 class="heading">Conseil en teintes et matière</h2>
+          <p class="description"></p>
         </div>
       </div>
 
-      <div class="item col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
+      <!--<div class="item col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
         <div class="team-thumb">
           <div class="image-holder">
             <img src="images/team-img5.jpg" class="img-responsive img-circle" alt="Lukia">
@@ -204,7 +208,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
       <div class="col-md-offset-2 col-md-8 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
         <div class="section-title">
           <h1>Réalisations</h1>
-          <p>Voici quelques unes de mes réalisations...</p>
+          <!--<p>Voici quelques unes de mes réalisations...</p>-->
         </div>
       </div>
       <ul class="grid cs-style-4">
@@ -212,8 +216,10 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
           <figure>
             <div><img src="images/decors/carreaux de ciment-min.jpg" alt="image 2"></div>
             <figcaption>
-              <h1>Aliquam erat</h1>
-              <small>Suspendisse venenatis quam sed libero euismod feugiat.</small>
+              <h1>Enduit décoratif</h1>
+              <small>Chantier enduit décoratif dans une cuisine.
+                Application d'un Marmorino KS, enduit à la chaux de chez  Nova color.
+                Ciré avec la Cera wax qui permet imperméabilité et la création d'effet. </small>
             </figcaption>
           </figure>
         </li>
@@ -221,8 +227,10 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
           <figure>
             <div><img src="images/decors/Affiche SNCF-min.jpg" alt="image 1"></div>
             <figcaption>
-              <h1>Sapien arcu</h1>
-              <small>Cum sociis natoque penatibus et magnis dis parturient montes.</small>
+              <h1>Grisaille</h1>
+              <small>Réalisation d'une toile de 1,65 x 1,20 cm  en acrylique.<br>
+                Cette toile à été réalisé d'après photo en 2 teintes: ombre naturel et sienne naturel.<br>
+                Mise sur chassie. </small>
             </figcaption>
           </figure>
         </li>
@@ -230,8 +238,8 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
           <figure>
             <div><img src="images/decors/Paysage avec drapé 1-min.jpg" alt="image 1"></div>
             <figcaption>
-              <h1>Sapien arcu</h1>
-              <small>Cum sociis natoque penatibus et magnis dis parturient montes.</small>
+              <h1>Colonne de vert de marbre et moulures</h1>
+              <small>Réalisation à l'acrylique d'un fond nuagé avec moulures. Puis d'une colonne de marbre de vert de mer.</small>
             </figcaption>
           </figure>
         </li>
@@ -239,8 +247,8 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
           <figure>
             <div><img src="images/decors/decors égyptien -min.jpg" alt="image 1"></div>
             <figcaption>
-              <h1>Sapien arcu</h1>
-              <small>Cum sociis natoque penatibus et magnis dis parturient montes.</small>
+              <h1>Carreau de ciment</h1>
+              <small>Réalisation d'une toile de 1,40 x 1,20 en acrylique. Carreaux de ciment fait à partir d'un pochoir unique. Puis réalisation de trompes l’œil avec des peluches. </small>
             </figcaption>
           </figure>
         </li>
