Update description and add Mathilde working picture

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 
-	<title>Mathilde Vedel - Peintre décorateur</title>
+	<title>Mathilde Vedel - Peintre décoratrice</title>
 <!--
 Snapshot Template
 http://www.templatemo.com/tm-493-snapshot
@@ -76,7 +76,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
     <div class="row">
       <div class="col-md-offset-1 col-md-10 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
         <h1 class="wow fadeInUp" data-wow-delay="0.6s">Mathilde Vedel</h1>
-        <p class="wow fadeInUp" data-wow-delay="0.9s">Peintre décorateur</p>
+        <p class="wow fadeInUp" data-wow-delay="0.9s">Peintre décoratrice</p>
         <!--<a href="#about" class="smoothScroll btn btn-success btn-lg wow fadeInUp" data-wow-delay="1.2s">Learn more</a>-->
       </div>
     </div>
@@ -91,15 +91,20 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
       <div class="col-md-9 col-sm-8 wow fadeInUp" data-wow-delay="0.2s">
         <div class="about-thumb">
           <h1>Qui suis-je ?</h1>
-          <p>En ???, je décide de m'investir dans un projet associatif à Bordeaux chez les Compagnons Bâtisseurs.
-            Riche de cette expérience de 3 années, j'acquis des compétences dans le second œuvre du bâtiment (électrique, menuiserie, carrelage, ossature bois).</p>
-          <p>Mon appétence pour la peinture se confirme lors de la formation de peintre en décor à l'école Murs déc à Nantes. Ensuite, j’intègre en ??? Color Rare, entreprise experte en pigment naturelle et enduits à la chaux.</p>
-          <p>Dans la peinture, j'exploite mes compétences dans les fausses matières (marbres, bois, pierres...), les enduits décoratifs, les trompes l’œil ainsi que dans la réalisation de toile.</p>
+          <p>En 2016, je décide de m'investir dans un projet associatif à Bordeaux chez les Compagnons Bâtisseurs.</p>
+          <p>Riche de cette expérience de 3 années, j'acquis des compétences dans le second œuvre du bâtiment
+            (électrique, menuiserie, carrelage, ossature bois).
+            Mon appétence pour la peinture se confirme lors de la formation de peintre en décor à l'école Murs Déc à
+            Nantes.</p>
+          <p>En 2020, j'intègre Color Rare, entreprise experte en pigment naturelle et enduits à la chaux.
+            Dans la peinture, j'exploite mes compétences dans les fausses matières (marbres, bois, pierres...), les
+            enduits décoratifs, les trompes l’œil ainsi que dans la réalisation de toile.</p>
+          <p>Si vous souhaitez échanger autour de votre projet de création ou de rénovation, je suis à votre écoute.</p>
         </div>
       </div>
-      <!--<div class="col-md-3 col-sm-4 wow fadeInUp about-img" data-wow-delay="0.6s">
-        <img src="images/decors/Paysage avec drapé 1-min.jpg" class="img-responsive img-circle" alt="About">
-      </div>-->
+      <div class="col-md-3 col-sm-4 wow fadeInUp about-img" data-wow-delay="0.6s">
+        <img src="images/math travail.jpg" class="img-responsive img-circle" alt="About">
+      </div>
       <div class="clearfix"></div>
       <div class="col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
          <div class="section-title text-center">
