--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
   	<link rel="stylesheet" href="css/component.css">
-	
+    <link rel="stylesheet" href="css/before-after.css">
     <link rel="stylesheet" href="css/owl.theme.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/vegas.min.css">
@@ -62,7 +62,8 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
             <li><a href="#about" class="smoothScroll"><span>A propos</span></a></li>
             <li><a href="#gallery" class="smoothScroll"><span>Réalisations</span></a></li>
             <li><a href="#contact" class="smoothScroll"><span>Contact</span></a></li>
-            <li><a href="gallery.html" class="smoothScroll"><div class="nav-link-gallery" title="Galerie"></div></a></li>
+            <!--<li><a href="gallery.html" class="smoothScroll"><div class="nav-link-gallery" title="Galerie"></div></a></li>-->
+            <li><a href="gallery.html" class="smoothScroll"><span>Gallerie</span></a></li>
           </ul>
        </div>
     </div>
@@ -207,6 +208,14 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
 <!-- Gallery section -->
 
 <section id="gallery">
+  <!--<div class="container">
+    <div class="container-ab">
+        <div class='img background-img'></div>
+        <div class='img foreground-img'></div>
+        <input type="range" min="1" max="100" value="50" class="slider" name='slider' id="slider">
+        <div class='slider-button'></div>
+    </div>
+  </div>-->
   <div class="container">
     <div class="row">
 
@@ -216,15 +225,24 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
           <!--<p>Voici quelques unes de mes réalisations...</p>-->
         </div>
       </div>
+
+
+
+      <div class="col-md-offset-2 col-md-8 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
+        <div class="section-title">
+          <h2>Décoration</h2>
+          <!--<p>Voici quelques unes de mes réalisations...</p>-->
+        </div>
+      </div>
+
       <ul class="grid cs-style-4">
+
         <li class="col-md-6 col-sm-6">
           <figure>
-            <div><img src="images/decors/carreaux de ciment-min.jpg" alt="image 2"></div>
+            <div><img src="images/decors/decors égyptien -min.jpg" alt="image 1"></div>
             <figcaption>
-              <h1>Enduit décoratif</h1>
-              <small>Chantier enduit décoratif dans une cuisine.
-                Application d'un Marmorino KS, enduit à la chaux de chez  Nova color.
-                Ciré avec la Cera wax qui permet imperméabilité et la création d'effet. </small>
+              <h1>Carreau de ciment</h1>
+              <small>Réalisation d'une toile de 1,40 x 1,20 en acrylique. Carreaux de ciment fait à partir d'un pochoir unique. Puis réalisation de trompes l’œil avec des peluches. </small>
             </figcaption>
           </figure>
         </li>
@@ -241,6 +259,17 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
         </li>
         <li class="col-md-6 col-sm-6">
           <figure>
+            <div><img src="images/decors/carreaux de ciment-min.jpg" alt="image 2"></div>
+            <figcaption>
+              <h1>Enduit décoratif</h1>
+              <small>Chantier enduit décoratif dans une cuisine.
+                Application d'un Marmorino KS, enduit à la chaux de chez  Nova color.
+                Ciré avec la Cera wax qui permet imperméabilité et la création d'effet. </small>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="col-md-6 col-sm-6">
+          <figure>
             <div><img src="images/decors/Paysage avec drapé 1-min.jpg" alt="image 1"></div>
             <figcaption>
               <h1>Colonne de vert de marbre et moulures</h1>
@@ -248,18 +277,28 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
             </figcaption>
           </figure>
         </li>
-        <li class="col-md-6 col-sm-6">
-          <figure>
-            <div><img src="images/decors/decors égyptien -min.jpg" alt="image 1"></div>
-            <figcaption>
-              <h1>Carreau de ciment</h1>
-              <small>Réalisation d'une toile de 1,40 x 1,20 en acrylique. Carreaux de ciment fait à partir d'un pochoir unique. Puis réalisation de trompes l’œil avec des peluches. </small>
-            </figcaption>
-          </figure>
-        </li>
+
 
       </ul>
+
     </div>
+
+    <div style="margin-top: 120px"  class="col-md-offset-2 col-md-8 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
+      <div class="section-title">
+        <h2>Rénovation</h2>
+        <!--<p>Voici quelques unes de mes réalisations...</p>-->
+      </div>
+    </div>
+
+    <div class="col-md-offset-2 col-md-8 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
+      <div class="container-ab">
+        <div class='img background-img'></div>
+        <div class='img foreground-img'></div>
+        <input type="range" min="1" max="100" value="50" class="slider" name='slider' id="slider">
+        <div class='slider-button'></div>
+      </div>
+    </div>
+
   </div>
   <a href="gallery.html" class="smoothScroll btn btn-success btn-lg wow fadeInUp" data-wow-delay="0.2s" target="_blank">Voir toutes mes réalisations</a>
 </section>
@@ -314,8 +353,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
                   <!--<li><a href="#" class="fa fa-google-plus wow fadeInUp" data-wow-delay="1.0s"></a></li>-->
                 </ul>
                 <p class="wow fadeInUp"  data-wow-delay="1s"><a href="legals.html">Mentions légales</a></p>
-				<p class="wow fadeInUp"  data-wow-delay="1s" >Copyright &copy; 2016 Snapshot Studio |
-                Design: </p>
+				<p class="wow fadeInUp"  data-wow-delay="1s" >Copyright &copy; 2016 Snapshot Studio</p>
 			</div>
 		</div>
 	</div>
@@ -326,6 +364,15 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
 
 <!-- Javascript  -->
 <script src="js/script.min.js"></script>
+<script>
+    $("#slider").on("input change", (e)=>{
+  const sliderPos = e.target.value;
+  // Update the width of the foreground image
+  $('.foreground-img').css('width', `${sliderPos}%`)
+  // Update the position of the slider button
+  $('.slider-button').css('left', `calc(${sliderPos}% - 18px)`)
+});
+</script>
 <!--<script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/vegas.min.js"></script>
