--- a/index.html
+++ b/index.html
@@ -283,26 +283,20 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
 
     </div>
 
-    <div style="margin-top: 120px"  class="col-md-offset-2 col-md-8 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
-      <div class="section-title">
-        <h2>Rénovation</h2>
-        <!--<p>Voici quelques unes de mes réalisations...</p>-->
-      </div>
-    </div>
 
-    <div class="col-md-offset-2 col-md-8 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
-      <div class="container-ab">
-        <div class='img background-img'></div>
-        <div class='img foreground-img'></div>
-        <input type="range" min="1" max="100" value="50" class="slider" name='slider' id="slider">
-        <div class='slider-button'></div>
-      </div>
-    </div>
-
-  </div>
   <a href="gallery.html" class="smoothScroll btn btn-success btn-lg wow fadeInUp" data-wow-delay="0.2s" target="_blank">Voir toutes mes réalisations</a>
 </section>
 
+<section id="renovation">
+
+    <div class="container-ab">
+      <div class='img background-img'></div>
+      <div class='img foreground-img'></div>
+      <input type="range" min="1" max="100" value="50" class="slider" name='slider' id="slider">
+      <div class='slider-button'></div>
+    </div>
+
+</section>
 
 <!-- Contact section -->
 
