--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
             <li><a href="#gallery" class="smoothScroll"><span>Réalisations</span></a></li>
             <li><a href="#contact" class="smoothScroll"><span>Contact</span></a></li>
             <!--<li><a href="gallery.html" class="smoothScroll"><div class="nav-link-gallery" title="Galerie"></div></a></li>-->
-            <li><a href="gallery.html" class="smoothScroll"><span>Gallerie</span></a></li>
+            <li><a href="https://www.instagram.com/mathilde__vedel" class="fa fa-instagram wow fadeInUp" data-wow-delay="0.8s"></a>
+            </li>
           </ul>
        </div>
     </div>
@@ -78,6 +79,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
       <div class="col-md-offset-1 col-md-10 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
         <h1 class="wow fadeInUp" data-wow-delay="0.6s">Mathilde Vedel</h1>
         <p class="wow fadeInUp" data-wow-delay="0.9s">Peintre décoratrice</p>
+        <a href="https://www.instagram.com/mathilde__vedel" class="fa fa-instagram wow fadeInUp" data-wow-delay="0.8s"></a>
         <!--<a href="#about" class="smoothScroll btn btn-success btn-lg wow fadeInUp" data-wow-delay="1.2s">Learn more</a>-->
       </div>
     </div>
@@ -239,7 +241,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
 
         <li class="col-md-6 col-sm-6">
           <figure>
-            <div><img src="images/decors/decors égyptien -min.jpg" alt="image 1"></div>
+            <div><img src="images/decors/carreaux de ciment-min.jpg" alt="image 1"></div>
             <figcaption>
               <h1>Carreau de ciment</h1>
               <small>Réalisation d'une toile de 1,40 x 1,20 en acrylique. Carreaux de ciment fait à partir d'un pochoir unique. Puis réalisation de trompes l’œil avec des peluches. </small>
@@ -248,7 +250,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
         </li>
         <li class="col-md-6 col-sm-6">
           <figure>
-            <div><img src="images/decors/Affiche SNCF-min.jpg" alt="image 1"></div>
+            <div><img src="images/decors/Grisaille-min.jpg" alt="image 1"></div>
             <figcaption>
               <h1>Grisaille</h1>
               <small>Réalisation d'une toile de 1,65 x 1,20 cm  en acrylique.<br>
@@ -259,7 +261,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
         </li>
         <li class="col-md-6 col-sm-6">
           <figure>
-            <div><img src="images/decors/carreaux de ciment-min.jpg" alt="image 2"></div>
+            <div><img class="fixture" src="images/chantier/portes placard/IMG_20220113_154952.jpg" alt="image 2"></div>
             <figcaption>
               <h1>Enduit décoratif</h1>
               <small>Chantier enduit décoratif dans une cuisine.
@@ -270,7 +272,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
         </li>
         <li class="col-md-6 col-sm-6">
           <figure>
-            <div><img src="images/decors/Paysage avec drapé 1-min.jpg" alt="image 1"></div>
+            <div><img src="images/decors/colonne vert de mer2-min.jpg" alt="image 1"></div>
             <figcaption>
               <h1>Colonne de vert de marbre et moulures</h1>
               <small>Réalisation à l'acrylique d'un fond nuagé avec moulures. Puis d'une colonne de marbre de vert de mer.</small>
