--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
             <li><a href="#gallery" class="smoothScroll"><span>Réalisations</span></a></li>
             <li><a href="#contact" class="smoothScroll"><span>Contact</span></a></li>
             <!--<li><a href="gallery.html" class="smoothScroll"><div class="nav-link-gallery" title="Galerie"></div></a></li>-->
-            <li><a href="https://www.instagram.com/mathilde__vedel" class="fa fa-instagram wow fadeInUp" data-wow-delay="0.8s"></a>
+            <li><a target="_blank" href="https://www.instagram.com/mathilde__vedel" class="insta-home fa fa-instagram wow fadeInUp" data-wow-delay="0.8s"></a>
             </li>
           </ul>
        </div>
@@ -79,7 +79,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
       <div class="col-md-offset-1 col-md-10 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
         <h1 class="wow fadeInUp" data-wow-delay="0.6s">Mathilde Vedel</h1>
         <p class="wow fadeInUp" data-wow-delay="0.9s">Peintre décoratrice</p>
-        <a href="https://www.instagram.com/mathilde__vedel" class="fa fa-instagram wow fadeInUp" data-wow-delay="0.8s"></a>
+        <a target="_blank" href="https://www.instagram.com/mathilde__vedel" class="insta-home fa fa-instagram wow fadeInUp" data-wow-delay="0.8s"></a>
         <!--<a href="#about" class="smoothScroll btn btn-success btn-lg wow fadeInUp" data-wow-delay="1.2s">Learn more</a>-->
       </div>
     </div>
@@ -286,7 +286,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
     </div>
 
 
-  <a href="gallery.html" class="smoothScroll btn btn-success btn-lg wow fadeInUp" data-wow-delay="0.2s" target="_blank">Voir toutes mes réalisations</a>
+    <a target="_blank" href="https://www.instagram.com/mathilde__vedel" class="smoothScroll btn btn-success btn-lg fa fa-instagram insta-home  wow fadeInUp" data-wow-delay="0.8s">  Voir toutes mes réalisations</a>
 </section>
 
 <section id="renovation">
