--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
         </li>
         <li class="col-md-6 col-sm-6">
           <figure>
-            <div><img class="fixture" src="images/chantier/portes placard/IMG_20220113_154952.jpg" alt="image 2"></div>
+            <div class="cropped"><img class="fixture" src="images/chantier/portes placard/IMG_20220113_154925.jpg" alt="image 2"></div>
             <figcaption>
               <h1>Enduit décoratif</h1>
               <small>Chantier enduit décoratif dans une cuisine.
@@ -279,10 +279,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
             </figcaption>
           </figure>
         </li>
-
-
       </ul>
-
     </div>
 
 
