--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
         </li>
         <li class="col-md-6 col-sm-6">
           <figure>
-            <div class="cropped"><img class="fixture" src="images/chantier/portes placard/IMG_20220113_154925.jpg" alt="image 2"></div>
+            <div class="cropped"><img class="fixture" src="images/chantier/enduit/IMG_20220314_171926-min.jpg" alt="image 2"></div>
             <figcaption>
               <h1>Enduit décoratif</h1>
               <small>Chantier enduit décoratif dans une cuisine.
@@ -286,7 +286,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
     <a target="_blank" href="https://www.instagram.com/mathilde__vedel" class="smoothScroll btn btn-success btn-lg fa fa-instagram insta-home  wow fadeInUp" data-wow-delay="0.8s">  Voir toutes mes réalisations</a>
 </section>
 
-<section id="renovation">
+<!--<section id="renovation">
 
     <div class="container-ab">
       <div class='img background-img'></div>
@@ -295,7 +295,7 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
       <div class='slider-button'></div>
     </div>
 
-</section>
+</section> -->
 
 <!-- Contact section -->
 
