--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@ http://tympanus.net/codrops/2013/06/18/caption-hover-effects/
           </figure>
         </li>
       </ul>
+      <a target="_blank" href="https://www.instagram.com/mathilde__vedel" class="smoothScroll fa fa-instagram insta-home  wow fadeInUp" data-wow-delay="0.8s">  Voir toutes mes réalisations</a>
     </div>
 
 
-    <a target="_blank" href="https://www.instagram.com/mathilde__vedel" class="smoothScroll btn btn-success btn-lg fa fa-instagram insta-home  wow fadeInUp" data-wow-delay="0.8s">  Voir toutes mes réalisations</a>
 </section>
 
 <!--<section id="renovation">
